# sfen-bro

./: Cargo.toml  LICENSE  README.md
src/: app.rs  board.rs  config.rs  fonts.rs  main.rs  pieces.rs  sfen.rs
