[package]
name = "sfen-bro"
version = "0.1.0"
edition = "2021"
description = "SFEN clipboard viewer for shogi positions"
license = "MIT"
repository = "https://github.com/Arborescent/sfen-bro"

[dependencies]
eframe = { version = "0.31", features = ["default_fonts"] }
arboard = "3.4"
image = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"